--- a/method_list.html
+++ b/method_list.html
@@ -190,21 +190,13 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter.html#call-class_method" title="Synvert::Core::Rewriter.call (method)">call</a></span>
-      <small>Synvert::Core::Rewriter</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#clear-class_method" title="Synvert::Core::Rewriter.clear (method)">clear</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#column-instance_method" title="Parser::AST::Node#column (method)">#column</a></span>
       <small>Parser::AST::Node</small>
@@ -212,7 +204,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_file-instance_method" title="Synvert::Core::Rewriter::Instance#current_file (method)">#current_file</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -220,7 +212,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_mutation-instance_method" title="Synvert::Core::Rewriter::Instance#current_mutation (method)">#current_mutation</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -228,7 +220,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_node-instance_method" title="Synvert::Core::Rewriter::Instance#current_node (method)">#current_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -236,7 +228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#decode-class_method" title="Synvert::Core::Engine::Erb.decode (method)">decode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -244,7 +236,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#delete-instance_method" title="Synvert::Core::Rewriter::Instance#delete (method)">#delete</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -252,7 +244,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#description-instance_method" title="Synvert::Core::Rewriter#description (method)">#description</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -260,7 +252,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#encode-class_method" title="Synvert::Core::Engine::Erb.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -268,15 +260,15 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter.html#execute-class_method" title="Synvert::Core::Rewriter.execute (method)">execute</a></span>
-      <small>Synvert::Core::Rewriter</small>
+      <span class='object_link'><a href="Synvert/Core/Utils.html#eval_snippet-class_method" title="Synvert::Core::Utils.eval_snippet (method)">eval_snippet</a></span>
+      <small>Synvert::Core::Utils</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#fetch-class_method" title="Synvert::Core::Rewriter.fetch (method)">fetch</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -284,7 +276,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#filename-instance_method" title="Parser::AST::Node#filename (method)">#filename</a></span>
       <small>Parser::AST::Node</small>
@@ -292,7 +284,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#find_node-instance_method" title="Synvert::Core::Rewriter::Instance#find_node (method)">#find_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -300,7 +292,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#flush_newline_if_pending-instance_method" title="Synvert::Core::Engine::Erubis#flush_newline_if_pending (method)">#flush_newline_if_pending</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -308,7 +300,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#gem_spec-instance_method" title="Synvert::Core::Rewriter#gem_spec (method)">#gem_spec</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -316,7 +308,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#goto_node-instance_method" title="Synvert::Core::Rewriter::Instance#goto_node (method)">#goto_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -324,7 +316,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#group-instance_method" title="Synvert::Core::Rewriter#group (method)">#group</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -332,7 +324,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper-instance_method" title="Synvert::Core::Rewriter#helper (method)">#helper</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -340,7 +332,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper_method-instance_method" title="Synvert::Core::Rewriter#helper_method (method)">#helper_method</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -348,7 +340,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helpers-instance_method" title="Synvert::Core::Rewriter#helpers (method)">#helpers</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -356,7 +348,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_exist_node (method)">#if_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -364,7 +356,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_gem-instance_method" title="Synvert::Core::Rewriter#if_gem (method)">#if_gem</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -372,7 +364,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_only_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_only_exist_node (method)">#if_only_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -380,7 +372,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_ruby-instance_method" title="Synvert::Core::Rewriter#if_ruby (method)">#if_ruby</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -388,7 +380,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#initialize-instance_method" title="Synvert::Core::Rewriter#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -396,7 +388,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Scope.html#initialize-instance_method" title="Synvert::Core::Rewriter::Scope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Scope</small>
@@ -404,7 +396,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Warning.html#initialize-instance_method" title="Synvert::Core::Rewriter::Warning#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Warning</small>
@@ -412,7 +404,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#initialize-instance_method" title="Synvert::Core::Rewriter::GemSpec#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -420,7 +412,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#initialize-instance_method" title="Synvert::Core::Rewriter::Instance#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -428,7 +420,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#initialize-instance_method" title="Synvert::Core::Rewriter::Condition#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -436,7 +428,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#initialize-instance_method" title="Synvert::Core::Rewriter::RubyVersion#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -444,7 +436,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#initialize-instance_method" title="Synvert::Core::Rewriter::GotoScope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -452,7 +444,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/QueryScope.html#initialize-instance_method" title="Synvert::Core::Rewriter::QueryScope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::QueryScope</small>
@@ -460,7 +452,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#initialize-instance_method" title="Synvert::Core::Rewriter::WithinScope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -468,7 +460,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#initialize-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -476,7 +468,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#insert-instance_method" title="Synvert::Core::Rewriter::Instance#insert (method)">#insert</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -484,7 +476,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#insert_after-instance_method" title="Synvert::Core::Rewriter::Instance#insert_after (method)">#insert_after</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -492,7 +484,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#line-instance_method" title="Parser::AST::Node#line (method)">#line</a></span>
       <small>Parser::AST::Node</small>
@@ -500,7 +492,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#match%3F-instance_method" title="Synvert::Core::Rewriter::GemSpec#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -508,7 +500,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#match%3F-instance_method" title="Synvert::Core::Rewriter::RubyVersion#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -516,7 +508,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Warning.html#message-instance_method" title="Synvert::Core::Rewriter::Warning#message (method)">#message</a></span>
       <small>Synvert::Core::Rewriter::Warning</small>
@@ -524,7 +516,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#name-instance_method" title="Synvert::Core::Rewriter#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -532,7 +524,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#name-instance_method" title="Synvert::Core::Rewriter::GemSpec#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -540,7 +532,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#new_code-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#new_code (method)">#new_code</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -548,7 +540,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#node-instance_method" title="Synvert::Core::Rewriter::Instance#node (method)">#node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -556,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#noop-instance_method" title="Synvert::Core::Rewriter::Instance#noop (method)">#noop</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -564,10 +556,18 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#only_paths-class_method" title="Synvert::Core::Configuration.only_paths (method)">only_paths</a></span>
       <small>Synvert::Core::Configuration</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#options-instance_method" title="Synvert::Core::Rewriter#options (method)">#options</a></span>
+      <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
