deploy: 4b14ebc66c7975ed0f3bf20570ddbf6e8a4c2dcd

--- a/method_list.html
+++ b/method_list.html
@@ -214,21 +214,13 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_file-instance_method" title="Synvert::Core::Rewriter::Instance#current_file (method)">#current_file</a></span>
-      <small>Synvert::Core::Rewriter::Instance</small>
-    </div>
-  </li>
-  
-
-  <li class="odd ">
-    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_mutation-instance_method" title="Synvert::Core::Rewriter::Instance#current_mutation (method)">#current_mutation</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_node-instance_method" title="Synvert::Core::Rewriter::Instance#current_node (method)">#current_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -236,7 +228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#decode-class_method" title="Synvert::Core::Engine::Erb.decode (method)">decode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -244,7 +236,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#delete-instance_method" title="Synvert::Core::Rewriter::Instance#delete (method)">#delete</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -252,7 +244,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#description-instance_method" title="Synvert::Core::Rewriter#description (method)">#description</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -260,7 +252,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#encode-class_method" title="Synvert::Core::Engine::Erb.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -268,7 +260,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#eval_snippet-class_method" title="Synvert::Core::Utils.eval_snippet (method)">eval_snippet</a></span>
       <small>Synvert::Core::Utils</small>
@@ -276,10 +268,18 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#fetch-class_method" title="Synvert::Core::Rewriter.fetch (method)">fetch</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#file_path-instance_method" title="Synvert::Core::Rewriter::Instance#file_path (method)">#file_path</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
@@ -526,13 +526,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#mutation_adapter-instance_method" title="Synvert::Core::Rewriter::Instance#mutation_adapter (method)">#mutation_adapter</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#name-instance_method" title="Synvert::Core::Rewriter#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#name-instance_method" title="Synvert::Core::Rewriter::GemSpec#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -540,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#new_code-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#new_code (method)">#new_code</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -548,7 +556,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#node-instance_method" title="Synvert::Core::Rewriter::Instance#node (method)">#node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -556,7 +564,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#noop-instance_method" title="Synvert::Core::Rewriter::Instance#noop (method)">#noop</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -564,7 +572,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#number_of_workers-class_method" title="Synvert::Core::Configuration.number_of_workers (method)">number_of_workers</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -572,7 +580,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#only_paths-class_method" title="Synvert::Core::Configuration.only_paths (method)">only_paths</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -580,7 +588,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#options-instance_method" title="Synvert::Core::Rewriter#options (method)">#options</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -588,7 +596,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#prepend-instance_method" title="Synvert::Core::Rewriter::Instance#prepend (method)">#prepend</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -596,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process-instance_method" title="Synvert::Core::Rewriter#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -604,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process-instance_method" title="Synvert::Core::Rewriter::Instance#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -612,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#process-instance_method" title="Synvert::Core::Rewriter::Condition#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -620,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#process-instance_method" title="Synvert::Core::Rewriter::GotoScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -628,7 +636,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#process-instance_method" title="Synvert::Core::Rewriter::WithinScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -636,7 +644,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_node (method)">#process_with_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -644,7 +652,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_other_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_other_node (method)">#process_with_other_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -652,10 +660,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process_with_sandbox-instance_method" title="Synvert::Core::Rewriter#process_with_sandbox (method)">#process_with_sandbox</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#query_adapter-instance_method" title="Synvert::Core::Rewriter::Instance#query_adapter (method)">#query_adapter</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
