deploy: ae1c7b42620df66afcf6e894dfd93f6ec16527b5

--- a/method_list.html
+++ b/method_list.html
@@ -46,13 +46,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#add_action-instance_method" title="Synvert::Core::Rewriter::Instance#add_action (method)">#add_action</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_affected_file-instance_method" title="Synvert::Core::Rewriter#add_affected_file (method)">#add_affected_file</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#add_arguments_with_parenthesis_if_necessary-instance_method" title="Synvert::Core::Rewriter::Helper#add_arguments_with_parenthesis_if_necessary (method)">#add_arguments_with_parenthesis_if_necessary</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
@@ -60,7 +68,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#add_curly_brackets_if_necessary-instance_method" title="Synvert::Core::Rewriter::Helper#add_curly_brackets_if_necessary (method)">#add_curly_brackets_if_necessary</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
@@ -68,7 +76,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_expr-instance_method" title="Synvert::Core::Engine::Erubis#add_expr (method)">#add_expr</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -76,7 +84,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_expr_escaped-instance_method" title="Synvert::Core::Engine::Erubis#add_expr_escaped (method)">#add_expr_escaped</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -84,7 +92,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_expr_literal-instance_method" title="Synvert::Core::Engine::Erubis#add_expr_literal (method)">#add_expr_literal</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -92,7 +100,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_file-instance_method" title="Synvert::Core::Rewriter#add_file (method)">#add_file</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -100,7 +108,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_postamble-instance_method" title="Synvert::Core::Engine::Erubis#add_postamble (method)">#add_postamble</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -108,7 +116,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_preamble-instance_method" title="Synvert::Core::Engine::Erubis#add_preamble (method)">#add_preamble</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -116,7 +124,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#add_receiver_if_necessary-instance_method" title="Synvert::Core::Rewriter::Helper#add_receiver_if_necessary (method)">#add_receiver_if_necessary</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
@@ -124,7 +132,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_snippet-instance_method" title="Synvert::Core::Rewriter#add_snippet (method)">#add_snippet</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -132,7 +140,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_stmt-instance_method" title="Synvert::Core::Engine::Erubis#add_stmt (method)">#add_stmt</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -140,7 +148,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erubis.html#add_text-instance_method" title="Synvert::Core::Engine::Erubis#add_text (method)">#add_text</a></span>
       <small>Synvert::Core::Engine::Erubis</small>
@@ -148,7 +156,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_warning-instance_method" title="Synvert::Core::Rewriter#add_warning (method)">#add_warning</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -156,18 +164,10 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#affected_files-instance_method" title="Synvert::Core::Rewriter#affected_files (method)">#affected_files</a></span>
       <small>Synvert::Core::Rewriter</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#any_value-instance_method" title="Synvert::Core::Rewriter::Instance#any_value (method)">#any_value</a></span>
-      <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
