--- a/method_list.html
+++ b/method_list.html
@@ -758,7 +758,7 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Configuration.html#skip_paths-class_method" title="Synvert::Core::Configuration.skip_paths (method)">skip_paths</a></span>
+      <span class='object_link'><a href="Synvert/Core/Configuration.html#single_quote-class_method" title="Synvert::Core::Configuration.single_quote (method)">single_quote</a></span>
       <small>Synvert::Core::Configuration</small>
     </div>
   </li>
@@ -766,13 +766,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Configuration.html#skip_paths-class_method" title="Synvert::Core::Configuration.skip_paths (method)">skip_paths</a></span>
+      <small>Synvert::Core::Configuration</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#strip_brackets-instance_method" title="Synvert::Core::Rewriter::Helper#strip_brackets (method)">#strip_brackets</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#strip_curly_braces-instance_method" title="Parser::AST::Node#strip_curly_braces (method)">#strip_curly_braces</a></span>
       <small>Parser::AST::Node</small>
@@ -780,7 +788,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#sub_snippets-instance_method" title="Synvert::Core::Rewriter#sub_snippets (method)">#sub_snippets</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -788,7 +796,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test-instance_method" title="Synvert::Core::Rewriter#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -796,7 +804,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#test-instance_method" title="Synvert::Core::Rewriter::Instance#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -804,7 +812,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test_results-instance_method" title="Synvert::Core::Rewriter#test_results (method)">#test_results</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -812,7 +820,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_lambda_literal-instance_method" title="Parser::AST::Node#to_lambda_literal (method)">#to_lambda_literal</a></span>
       <small>Parser::AST::Node</small>
@@ -820,7 +828,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_single_quote-instance_method" title="Parser::AST::Node#to_single_quote (method)">#to_single_quote</a></span>
       <small>Parser::AST::Node</small>
@@ -828,7 +836,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_string-instance_method" title="Parser::AST::Node#to_string (method)">#to_string</a></span>
       <small>Parser::AST::Node</small>
@@ -836,7 +844,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_symbol-instance_method" title="Parser::AST::Node#to_symbol (method)">#to_symbol</a></span>
       <small>Parser::AST::Node</small>
@@ -844,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#unless_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#unless_exist_node (method)">#unless_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -852,7 +860,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#version-instance_method" title="Synvert::Core::Rewriter::GemSpec#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -860,7 +868,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#version-instance_method" title="Synvert::Core::Rewriter::RubyVersion#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -868,7 +876,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#warn-instance_method" title="Synvert::Core::Rewriter::Instance#warn (method)">#warn</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -876,7 +884,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#warnings-instance_method" title="Synvert::Core::Rewriter#warnings (method)">#warnings</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -884,7 +892,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#within_files-instance_method" title="Synvert::Core::Rewriter#within_files (method)">#within_files</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -892,7 +900,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#within_node-instance_method" title="Synvert::Core::Rewriter::Instance#within_node (method)">#within_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -900,7 +908,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap-instance_method" title="Synvert::Core::Rewriter::Instance#wrap (method)">#wrap</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -908,10 +916,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#wrap_curly_braces-instance_method" title="Parser::AST::Node#wrap_curly_braces (method)">#wrap_curly_braces</a></span>
       <small>Parser::AST::Node</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap_with_quotes-instance_method" title="Synvert::Core::Rewriter::Instance#wrap_with_quotes (method)">#wrap_with_quotes</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
