--- a/method_list.html
+++ b/method_list.html
@@ -830,13 +830,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#syntax_tree_parser%3F-instance_method" title="Synvert::Core::Rewriter#syntax_tree_parser? (method)">#syntax_tree_parser?</a></span>
+      <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#tab_width-class_method" title="Synvert::Core::Configuration.tab_width (method)">tab_width</a></span>
       <small>Synvert::Core::Configuration</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test-instance_method" title="Synvert::Core::Rewriter#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -844,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#test-instance_method" title="Synvert::Core::Rewriter::Instance#test (method)">#test</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -852,7 +860,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#test_results-instance_method" title="Synvert::Core::Rewriter#test_results (method)">#test_results</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -860,7 +868,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_lambda_literal-instance_method" title="Parser::AST::Node#to_lambda_literal (method)">#to_lambda_literal</a></span>
       <small>Parser::AST::Node</small>
@@ -868,7 +876,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_single_quote-instance_method" title="Parser::AST::Node#to_single_quote (method)">#to_single_quote</a></span>
       <small>Parser::AST::Node</small>
@@ -876,7 +884,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_string-instance_method" title="Parser::AST::Node#to_string (method)">#to_string</a></span>
       <small>Parser::AST::Node</small>
@@ -884,7 +892,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#to_symbol-instance_method" title="Parser::AST::Node#to_symbol (method)">#to_symbol</a></span>
       <small>Parser::AST::Node</small>
@@ -892,7 +900,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#unless_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#unless_exist_node (method)">#unless_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -900,7 +908,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#version-instance_method" title="Synvert::Core::Rewriter::GemSpec#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -908,7 +916,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#version-instance_method" title="Synvert::Core::Rewriter::RubyVersion#version (method)">#version</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -916,7 +924,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#warn-instance_method" title="Synvert::Core::Rewriter::Instance#warn (method)">#warn</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -924,7 +932,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#warnings-instance_method" title="Synvert::Core::Rewriter#warnings (method)">#warnings</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -932,7 +940,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#within_files-instance_method" title="Synvert::Core::Rewriter#within_files (method)">#within_files</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -940,7 +948,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#within_node-instance_method" title="Synvert::Core::Rewriter::Instance#within_node (method)">#within_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -948,7 +956,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap-instance_method" title="Synvert::Core::Rewriter::Instance#wrap (method)">#wrap</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -956,7 +964,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#wrap_curly_braces-instance_method" title="Parser::AST::Node#wrap_curly_braces (method)">#wrap_curly_braces</a></span>
       <small>Parser::AST::Node</small>
@@ -964,7 +972,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#wrap_with_quotes-instance_method" title="Synvert::Core::Rewriter::Instance#wrap_with_quotes (method)">#wrap_with_quotes</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
