deploy: b53c71bcfdd6f70abe3a77f6303afa95834f98a3

--- a/method_list.html
+++ b/method_list.html
@@ -526,13 +526,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#load_data-instance_method" title="Synvert::Core::Rewriter#load_data (method)">#load_data</a></span>
+      <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#load_snippet-class_method" title="Synvert::Core::Utils.load_snippet (method)">load_snippet</a></span>
       <small>Synvert::Core::Utils</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#match%3F-instance_method" title="Synvert::Core::Rewriter::GemSpec#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -540,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#match%3F-instance_method" title="Synvert::Core::Rewriter::RubyVersion#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -548,7 +556,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Warning.html#message-instance_method" title="Synvert::Core::Rewriter::Warning#message (method)">#message</a></span>
       <small>Synvert::Core::Rewriter::Warning</small>
@@ -556,7 +564,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#mutation_adapter-instance_method" title="Synvert::Core::Rewriter::Instance#mutation_adapter (method)">#mutation_adapter</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -564,7 +572,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#name-instance_method" title="Synvert::Core::Helper#name (method)">#name</a></span>
       <small>Synvert::Core::Helper</small>
@@ -572,7 +580,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#name-instance_method" title="Synvert::Core::Rewriter#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -580,7 +588,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#name-instance_method" title="Synvert::Core::Rewriter::GemSpec#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -588,7 +596,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#new_code-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#new_code (method)">#new_code</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -596,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#node-instance_method" title="Synvert::Core::Rewriter::Instance#node (method)">#node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -604,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#noop-instance_method" title="Synvert::Core::Rewriter::Instance#noop (method)">#noop</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -612,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#number_of_workers-class_method" title="Synvert::Core::Configuration.number_of_workers (method)">number_of_workers</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -620,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#only_paths-class_method" title="Synvert::Core::Configuration.only_paths (method)">only_paths</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -628,7 +636,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#options-instance_method" title="Synvert::Core::Rewriter#options (method)">#options</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -636,7 +644,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#parser-instance_method" title="Synvert::Core::Rewriter#parser (method)">#parser</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -644,7 +652,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#parser-instance_method" title="Synvert::Core::Rewriter::Instance#parser (method)">#parser</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -652,7 +660,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#prepend-instance_method" title="Synvert::Core::Rewriter::Instance#prepend (method)">#prepend</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -660,7 +668,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process-instance_method" title="Synvert::Core::Rewriter#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -668,7 +676,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process-instance_method" title="Synvert::Core::Rewriter::Instance#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -676,7 +684,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#process-instance_method" title="Synvert::Core::Rewriter::Condition#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -684,7 +692,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#process-instance_method" title="Synvert::Core::Rewriter::GotoScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -692,7 +700,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#process-instance_method" title="Synvert::Core::Rewriter::WithinScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -700,7 +708,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_node (method)">#process_with_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -708,7 +716,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_other_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_other_node (method)">#process_with_other_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -716,7 +724,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process_with_sandbox-instance_method" title="Synvert::Core::Rewriter#process_with_sandbox (method)">#process_with_sandbox</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -724,7 +732,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine.html#register-class_method" title="Synvert::Core::Engine.register (method)">register</a></span>
       <small>Synvert::Core::Engine</small>
@@ -732,7 +740,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#register-class_method" title="Synvert::Core::Helper.register (method)">register</a></span>
       <small>Synvert::Core::Helper</small>
@@ -740,7 +748,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#register-class_method" title="Synvert::Core::Rewriter.register (method)">register</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -748,7 +756,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#reject_keys_from_hash-instance_method" title="Synvert::Core::Rewriter::Helper#reject_keys_from_hash (method)">#reject_keys_from_hash</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
@@ -756,7 +764,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#remove-instance_method" title="Synvert::Core::Rewriter::Instance#remove (method)">#remove</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -764,7 +772,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#remove_file-instance_method" title="Synvert::Core::Rewriter#remove_file (method)">#remove_file</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -772,7 +780,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#replace-instance_method" title="Synvert::Core::Rewriter::Instance#replace (method)">#replace</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -780,7 +788,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#replace_erb_stmt_with_expr-instance_method" title="Synvert::Core::Rewriter::Instance#replace_erb_stmt_with_expr (method)">#replace_erb_stmt_with_expr</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -788,7 +796,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#replace_with-instance_method" title="Synvert::Core::Rewriter::Instance#replace_with (method)">#replace_with</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -796,7 +804,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#reset-instance_method" title="Synvert::Core::Rewriter#reset (method)">#reset</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -804,7 +812,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#respect_gitignore-class_method" title="Synvert::Core::Configuration.respect_gitignore (method)">respect_gitignore</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -812,7 +820,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#root_path-class_method" title="Synvert::Core::Configuration.root_path (method)">root_path</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -820,9 +828,17 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#ruby_version-instance_method" title="Synvert::Core::Rewriter#ruby_version (method)">#ruby_version</a></span>
+      <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#save_data-instance_method" title="Synvert::Core::Rewriter#save_data (method)">#save_data</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
@@ -976,6 +992,22 @@
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#warnings-instance_method" title="Synvert::Core::Rewriter#warnings (method)">#warnings</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#with_configurations-instance_method" title="Synvert::Core::Rewriter#with_configurations (method)">#with_configurations</a></span>
+      <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Configuration.html#with_temporary_configurations-class_method" title="Synvert::Core::Configuration.with_temporary_configurations (method)">with_temporary_configurations</a></span>
+      <small>Synvert::Core::Configuration</small>
     </div>
   </li>
   
